Changelog
---------
2.0.0
-CHANGE: ported to 1.16.4
-CHANGE: Now uses Curios instead of Baubles

1.12.0
-CHANGE: ported to 1.12.2

0.12.0
-CHANGE: updated InfinityLib
-CHANGE: tweaked attack speed

0.11.0
-CHANGE: updated InfinityLib

0.4.0
-FIXED: crash on startup
-CHANGE: updated InfinityLib

0.3.0
-CHANGE: updated Baubles to 1.3.8
-CHANGE: ported to InfinityLib

0.10
-Ported to Minecraft 1.10.2

0.9
-FIXED: import java.util.Arrays instead of scala/actors/threadpool/Arrays -.-

0.8
-FIXED: A crash due to importing a wrong library

0.7
-Ported to Minecraft 1.9.4
-ADDED: you can now right click the maneuver gear to automatically equip it in the belt slot
-FIXED: the dart impact desync bug has finally been fixed
-CHANGE: Since the LAN-bug in baubles has been fixed, this mod will also now work in LAN worlds
-CHANGE: The maneuver gear now requires two handles: one in each hand, this is to be consistent with Minecraft's 1.9 dual wielding system
-CHANGE: overhauled damage system to be more in line with vanilla

0.6
-FIXED: occasional NPE when attacking nothing with no blades equipped
-FIXED: NPE on other clients when an EntityDart is within range, but the corresponding player isn't

0.5:
-FIXED: Other clients disconnecting when trying to swing the left arm of a player which is out of rendering range
-ADDED: A key binding config system to avoid key binding clutter, if you have a small amount of mods you can disable this and use the vanilla system instead

0.4
-FIXED: Recipes showing up multiple times in JEI
-FIXED: Cables not rendering correctly in first person

0.3
-Ported to Minecraft 1.8.9

0.2
-FIXED: Still being able to use boost after unequipping the Maneuver Gear

0.1
-Initial build